Bug 403014 - Windows "Don't Index" bit set on download files. (r=sdwilsh,dougt)